--- a/styles/background.css
+++ b/styles/background.css
@@ -1,3 +1,14 @@
+.stars {
+	position: fixed;
+	top: 0;
+	left: 200px;
+	width: 100%;
+	height: 120%;
+	transform: rotate(-45deg);
+    color: aqua;
+	z-index: 1000;
+}
+
 .star {
 	--star-color: var(--primary-color);
 	--star-tail-length: 6em;
