--- a/styles/home.css
+++ b/styles/home.css
@@ -1,32 +1,19 @@
-.home {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	min-height: 100vh;
+.home-section {
 	background: radial-gradient(ellipse at bottom, #0d1d31 0%, #0c0d13 100%);
-	overflow: hidden;
 }
 .home_container {
 	display: flex;
+	flex-direction: column;
 	align-items: center;
 	justify-content: center;
+	min-height: 100vh;
 }
-.home_paragraph {
-	top: 50%;
-	left: 50%;
-	display: flex;
-	row-gap: 10px;
-	position: fixed;
-	color: #f1f1f1;
+.home_text {
 	text-align: center;
-	align-items: center;
-	flex-direction: column;
-	transform: translate(-50%, -50%);
-}
-.home_paragraph p {
 	font-size: 42px;
 	font-weight: 300;
 	user-select: none;
+	color: #f1f1f1;
 }
 .fullName {
 	color: aqua;
