--- a/styles/test.css
+++ b/styles/test.css
@@ -45,3 +45,12 @@ polygon.arrow-top {
 	  opacity: 1;
   	}
 }
+
+/* <div class="home_arrows">
+<p>More about me</p>
+<svg id="more-arrows">
+	<polygon style="fill:aqua" class="arrow-top" points="37.6,27.9 1.8,1.3 3.3,0 37.6,25.3 71.9,0 73.7,1.3 "/>
+	<polygon style="fill:aqua" class="arrow-middle" points="37.6,45.8 0.8,18.7 4.4,16.4 37.6,41.2 71.2,16.4 74.5,18.7 "/>
+	<polygon style="fill:aqua" class="arrow-bottom" points="37.6,64 0,36.1 5.1,32.8 37.6,56.8 70.4,32.8 75.5,36.1 "/>
+</svg>
+</div> */
