Added cool animation

--- a/styles/background.css
+++ b/styles/background.css
@@ -1,10 +1,10 @@
 .stars {
 	position: fixed;
 	top: 0;
-	left: 200px;
+	left: 250px;
 	width: 100%;
-	height: 120%;
-	transform: rotate(-45deg);
+	height: 160%;
+	transform: rotate(-90deg);
     color: aqua;
 	z-index: 1000;
 }
@@ -334,6 +334,12 @@
 	--fall-duration: 11.36s;
 	--fall-delay: 4.318s;
 }
+.star:nth-child(odd):hover {
+	animation-play-state: paused;
+}
+.star:nth-child(even):hover {
+	animation-play-state: paused;
+}
 .star::before,
 .star::after {
 	position: absolute;
@@ -341,7 +347,7 @@
 	top: 0;
 	left: calc(var(--star-width) / -2);
 	width: var(--star-width);
-	height: 100%;
+	height: 200%;
 	background: linear-gradient(45deg, transparent, currentColor, transparent);
 	border-radius: inherit;
 	animation: blink 2s linear infinite;
