--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -1,12 +1,8 @@
 #navbar {
 	overflow: hidden;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	gap: 80px;
+	gap: 50px;
 	text-transform: uppercase;
 	overflow: hidden;
-	background-color: rgb(103, 103, 103);
 }
 
 #navbar a {
@@ -14,28 +10,35 @@
 	display: block;
 	color: black;
 	text-align: center;
-	padding: 14px 16px;
+	padding: 35px 20px;
 	text-decoration: none;
 	font-size: 20px;
 }
 
 #navbar a:hover {
-	background-color: #ddd;
-	color: black;
+	transform: scale(1.5);
+	transition: 0.3s ease-in-out;
 }
-
-#navbar a.active {
-	color: aqua;
-	transition: 0.3s;
+#navbar a:not(:hover) {
+	transition: 0.5s ease-in-out;
+}
+#navbar a i:not(:hover) {
+	transition: 0.5s ease-in-out;
+}
+.home i:hover {
+	color: red;
+	transition: 0.3s ease-in-out;
 }
 .content {
 	padding: 16px;
 }
 
 .sticky {
+	display: flex;
 	position: fixed;
-	top: 0;
-	width: 100%;
+	bottom: 0;
+	left: 50%;
+    transform: translate(-50%, 0);
 }
 
 .sticky + .content {
