--- a/styles/home.css
+++ b/styles/home.css
@@ -1,6 +1,22 @@
-/* .home-section {
-	background: radial-gradient(ellipse at bottom, #0d1d31 0%, #0c0d13 100%);
-} */
+.home-section {
+	z-index: 1;
+	/* background-color: #8BC6EC; */
+	background-image: linear-gradient(135deg, #141e30, #243b55);
+	animation: gradient 15s ease-in-out infinite;
+	background-size: 400% 400%;
+}
+
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
 .home_container {
 	display: flex;
 	flex-direction: column;
