--- a/styles/global.css
+++ b/styles/global.css
@@ -18,6 +18,12 @@ a {
 section:nth-child(1) {
 	padding: 0 10px;
 }
+section:nth-child(4) {
+	background-color: #F5F5F5;
+}
+section {
+	padding: 0 330px;
+}
 :root {
 	--home-icon: #f92418;
 	--about-icon: #9d7463;
