--- a/styles/about.css
+++ b/styles/about.css
@@ -28,7 +28,7 @@
 	font-size: 24px;
 	font-weight: 500;
 }
-.f {
+/* .f {
 	color: red;
 }
 .s {
@@ -39,7 +39,7 @@
 }
 .cc {
 	color: yellow;
-}
+} */
 .p-text {
 	margin-top: 10px;
 	font-weight: 400;
