--- a/styles/about.css
+++ b/styles/about.css
@@ -60,11 +60,11 @@
 	margin: 0 0 0 50px;
 	font-size: 20px;
 }
-.my-text div {
+/* .my-text div {
 	font-size: 30px;
 	font-weight: 500;
-	padding: 20px 0;
-}
+	padding: 50px 0;
+} */
 .my-text p span {
 	font-weight: 600;
 }
