Created Projects data

--- a/styles/about.css
+++ b/styles/about.css
@@ -13,7 +13,7 @@
 	color: #666;
 }
 .about_content {
-	margin: 100px 0;
+	margin-top: 100px;
 	display: grid;
 	grid-template-columns: 1fr 1fr;
 	grid-gap: 10rem;
@@ -52,7 +52,7 @@
 .about__contact-btn:hover {
 	color: black;
 	background: transparent;
-	border: 2px solid #facf0f;
+	border: #facf0f;
 }
 .skills {
 	display: flex;
