Finished Projects Section

--- a/styles/global.css
+++ b/styles/global.css
@@ -15,14 +15,14 @@ a {
 	text-decoration: none;
 	color: #f1f1f1;
 }
-section:nth-child(odd) {
+section:nth-child(even) {
 	background-color: #F5F5F5;
 }
 .about-section {
 	padding: 100px 330px;
 }
 .projects-section {
-	padding: 100px 330px;
+	padding: 100px 90px;
 }
 .contact-section {
 	padding: 100px 330px;
