--- a/styles/home.css
+++ b/styles/home.css
@@ -35,112 +35,38 @@
 }
 .home_text {
 	text-align: center;
-	font-size: 42px;
-	font-weight: 300;
+	font-size: 45px;
+	font-weight: 400;
 	user-select: none;
-	background: rgba(0, 0, 0, 0.5);
+	/* background: rgba(0, 0, 0, 0.5); */
 	border-radius: 30px;
 	padding: 50px;
 }
 .fullName {
-	color: aqua;
-	font-size: 42px;
+	color: #4cd1ca;
+	font-size: 45px;
 	font-weight: 500;
 }
 .btn-more {
-	user-select: none;
-	display: -webkit-box;
-	display: -ms-flexbox;
-	display: flex;
-	-webkit-box-align: center;
-	-ms-flex-align: center;
-	align-items: center;
-	-webkit-box-pack: center;
-	-ms-flex-pack: center;
-	justify-content: center;
-	height: 100%;
-	background: transparent;
-    margin-top: 20px;
-}
-
-.effect1 {
-	color: aqua;
-	text-decoration: none;
-	font-family: sans-serif;
-	font-size: 32px;
-	position: relative;
-	padding: 10px 50px 10px 20px;
-	-webkit-transition: all 0.3s;
-	-o-transition: all 0.3s;
-	transition: all 0.3s;
-	-webkit-transform: scale(3);
-	-ms-transform: scale(3);
-	transform: scale(1);
-}
-
-.effect1 .bg-btn {
-	background: aqua;
-	width: 30px;
-	height: 2px;
-	position: absolute;
-	right: 0;
-	top: 50%;
-	margin-top: -1px;
-	z-index: -1;
-	-webkit-transition: all 0.3s;
-	-o-transition: all 0.3s;
-	transition: all 0.3s;
-}
-
-.effect1:hover {
-	padding-right: 20px;
-	color: #f1f1f1;
+	margin-top: 50px;
+	outline: none;
 	cursor: pointer;
+	border: 2px solid #4cd1ca;
+	text-transform: uppercase;
+    letter-spacing: 1px;
+    display: inline-block;
+    font-weight: 700;
+    border-radius: 5px;
+    box-shadow: 0 5px 15px 0 rgb(0 0 0 / 15%);
+    transition: .3s;
+    color: whitesmoke;
+	padding: 1.2rem 5rem;
+    font-size: 18px;
 }
-
-.effect1:hover .bg-btn {
-	height: 100%;
-	width: 100%;
-	-webkit-transform: translate(0, -50%);
-	-ms-transform: translate(0, -50%);
-	transform: translate(0, -50%);
+.btn-more:hover {
+	color: #f1f1f1;
+	background: #4cd1ca;
 }
-
-.effect1 .bg-btn:before,
-.effect1 .bg-btn:after {
-	content: "";
-	height: 2px;
-	width: 10px;
-	background: aqua;
-	position: absolute;
-	right: -2px;
-	-webkit-transition: all 0.3s;
-	-o-transition: all 0.3s;
-	transition: all 0.3s;
-}
-
-.effect1 .bg-btn:before {
-	bottom: 3px;
-	-webkit-transform: rotate(45deg);
-	-ms-transform: rotate(45deg);
-	transform: rotate(45deg);
-}
-.effect1 .bg-btn:after {
-	top: 3px;
-	-webkit-transform: rotate(-45deg);
-	-ms-transform: rotate(-45deg);
-	transform: rotate(-45deg);
-}
-
-.effect1:hover .bg-btn:before,
-.effect1:hover .bg-btn:after {
-	right: 0;
-}
-
-.effect1:hover .bg-btn:before {
-	bottom: 6px;
-}
-
-.effect1:hover .bg-btn:after {
-	top: 6px;
+.btn-more:not(:hover) {
+	transition: 0.5s ease-in-out;
 }
