--- a/styles/contact.css
+++ b/styles/contact.css
@@ -1,3 +1,6 @@
+.contact-section {
+	padding: 100px 330px;
+}
 .contact__form-container{
     box-shadow: rgb(100 100 111 / 20%) 0 7px 29px 0;
     background: #fff;
