--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,4 +1,5 @@
 .footer {
+    padding: 100px 330px 30px 330px;
     background-color: #111;
 }
 .footer__container {
@@ -17,6 +18,10 @@
 }
 .socials a i {
     font-size: 25px;
+}
+a {
+	text-decoration: none;
+	color: #f1f1f1;
 }
 .footer__container-row1 {
     width: 40%;
