--- a/styles/projects.css
+++ b/styles/projects.css
@@ -1,3 +1,7 @@
+.projects-section {
+	padding: 100px 90px;
+	background-color: #f5f5f5;	
+}
 .projects_container {
 	display: grid;
 	grid-gap: 50px;
