--- a/styles/home.css
+++ b/styles/home.css
@@ -1,6 +1,6 @@
 .home-section {
 	z-index: 1;
-	background-image: linear-gradient(135deg, #141e30, #8BC6EC);
+	background-image: linear-gradient(135deg, #141e30, #297ab0);
 	animation: gradient 15s ease-in-out infinite;
 	background-size: 400% 400%;
 }
@@ -23,15 +23,15 @@
 	justify-content: center;
 	min-height: 100vh;
 	color: #f1f1f1;
-	animation: animate 1s;
+	animation: animate 2s;
 }
 
 @keyframes animate {
 	from{
-		transform: rotateX(90deg);
+		transform:scale(0.3);
 	}
 	to {
-		transform: rotateX(0deg);
+		transform:scale(1);
 	}
 }
 .home_text {
