--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -1,67 +1,40 @@
 #navbar {
-	z-index: 1000;
-	gap: 60px;
-	border-radius: 20px;
-	background-color: rgba(255, 255, 255, 0.6);
 	display: flex;
+	gap: 60px;
 	justify-content: center;
+	text-align: center;
+	background-color: rgba(255, 255, 255, 0.6);
 }
 #navbar a {
-	font-size: 18px;
+	float: left;
+	display: block;
+	color: #000000;
 	text-align: center;
-	padding: 35px 35px;
-	color: black;
+	padding: 30px;
+	font-size: 22px;
 }
-#navbar .home.active {
-	color: var(--home-icon);
+#navbar a:after {
+	padding: 2px;
+	display: block;
+	content: "";
+	border-bottom: solid 3px #019fb6;
+	transform: scaleX(0);
+	transition: transform 0.3s ease-in-out;
 }
-#navbar .about.active {
-	color: var(--about-icon);
+#navbar a:hover:after {
+	transform: scaleX(1);
 }
-#navbar .education.active {
-	color: var(--edu-icon);
+#navbar .active:after {
+	transform: scale(1);
 }
-#navbar .projects.active {
-	color: var(--pro-icon);
+#navbar.sticky {
+	position: fixed;
+	top: 0;
+	width: 100%;
 }
-#navbar .contact.active {
-	color: var(--contact-icon);
+.sticky + .about-section {
+	padding-top: 200px
 }
-#navbar a:hover {
-	transform: scale(1.5);
-	transition: 0.3s ease-in-out;
-}
-#navbar a:not(:hover) {
-	transition: 0.3s ease-in-out;
-}
-#navbar a i:not(:hover) {
-	transition: 0.3s ease-in-out;
-}
-.home i:hover {
-	color: var(--home-icon);
-	transition: 0.3s ease-in-out;
-}
-.about i:hover {
-	color: var(--about-icon);
-	transition: 0.3s ease-in-out;
-}
-.education i:hover {
-	color: var(--edu-icon);
-	transition: 0.3s ease-in-out;
-}
-.projects i:hover {
-	color: var(--pro-icon);
-	transition: 0.3s ease-in-out;
-}
-.contact i:hover {
-	color: var(--contact-icon);
-	transition: 0.3s ease-in-out;
-}
-.sticky {
-	left: 50%;
-	transform: translateX(-50%);
-}
-
 @media (min-width: 320px) and (max-width: 480px) {
 	#navbar {
 		gap: 20px;
