--- a/styles/about.css
+++ b/styles/about.css
@@ -11,6 +11,7 @@
 	margin: 20px 0;
 	font-size: 24px;
 	font-weight: 500;
+	text-align: center;
 }
 .icon_text {
 	color: #666;
@@ -57,6 +58,57 @@
 	font-size: 100px;
 }
 
-@media (min-width: 320px) and (max-width: 480px){
-
+@media (min-width: 320px) and (max-width: 480px) {
+	.about-head {
+		font-size: 22pt;
+	}
+	.about-section {
+		padding: 120px 10px;
+	}
+	.about-container {
+		min-height: 100%;
+		display: flex;
+		flex-wrap: wrap;
+		flex-direction: row;
+		justify-content: center;
+	}
+	.about-container > div {
+		display: flex;
+		flex-basis: calc(50% - 40px);
+		justify-content: center;
+		flex-direction: column;
+	}
+	.about-container > div > div {
+		display: flex;
+		justify-content: center;
+		flex-direction: row;
+	}
+	.icon_title {
+		font-size: 22px;
+		text-align: center;
+	}
+	.about-icon {
+		font-size: 75px;
+	}
+	.icon_text {
+		font-size: 12px;
+	}
+	.about_content {
+		display: grid;
+		grid-template-columns: auto;
+		grid-gap: 5rem;
+	}
+	.about__title {
+		text-align: center;
+	}
+	.about_text-p {
+		padding: 7px 18px;
+		font-size: 15px;
+	}
+	.about_text-p li::before {
+		font-weight: bold; /* If you want it to be bold */
+		display: inline-block;
+		width: 1em;
+		margin-left: -1em;
+	}
 }
