--- a/styles/global.css
+++ b/styles/global.css
@@ -10,7 +10,7 @@ html {
 }
 .header {
 	margin-bottom: 100px;
-	font-size: 38px;
+	font-size: 32px;
 	font-weight: 600;
 	text-align: center;
 	text-transform: uppercase;
@@ -56,4 +56,22 @@ input {
 }
 :root {
 	--main-color: #019fb6;
+}
+@media (min-width: 320px) and (max-width: 480px) {
+	.btn {
+		outline: none;
+		cursor: pointer;
+		border: none;
+		text-transform: uppercase;
+		letter-spacing: 1px;
+		display: inline-block;
+		font-weight: 500;
+		border-radius: 5px;
+		box-shadow: 0 5px 15px 0 rgb(0 0 0 / 15%);
+		transition: .3s;
+		background: var(--main-color);
+		color: white;
+		padding: 1.2rem 2rem;
+		font-size: 16px;
+	}
 }
