--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -1,51 +1,70 @@
-#navbar {
+.topnav {
 	display: flex;
 	gap: 60px;
 	justify-content: center;
-	text-align: center;
-	background-color: rgba(255, 255, 255, 0.6);
+	background-color:rgb(255, 255, 255);
 }
-#navbar a {
+.topnav a {
 	float: left;
 	display: block;
 	color: #000000;
 	text-align: center;
-	padding: 30px;
+	padding: 25px 35px;
+	text-decoration: none;
 	font-size: 22px;
 }
-#navbar a:after {
+.topnav .icon {
+	display: none;
+}
+.topnav a:after {
 	padding: 2px;
 	display: block;
 	content: "";
-	border-bottom: solid 3px #019fb6;
+	border-bottom: solid 2px #019fb6;
 	transform: scaleX(0);
 	transition: transform 0.3s ease-in-out;
 }
-#navbar a:hover:after {
+.topnav a:hover:after {
 	transform: scaleX(1);
 }
-#navbar .active:after {
+.topnav .active:after {
 	transform: scale(1);
 }
-#navbar.sticky {
+.topnav.sticky {
 	position: fixed;
 	top: 0;
 	width: 100%;
 }
 .sticky + .about-section {
-	padding-top: 200px
+	padding-top: 180px;
 }
 @media (min-width: 320px) and (max-width: 480px) {
-	#navbar {
-		gap: 20px;
+	.topnav {
+		display:inline;
+		overflow: hidden;
 	}
-	#navbar a {
-		padding: 15px 15px;
-		font-size: 16px;
+	.topnav a {
+		font-size: 15px;
+		display: none;
 	}
-	.sticky {
-		display: flex;
-		position: sticky;
+	.topnav a.icon {
+		float: right;
+		display: block;
+	}
+}
+
+@media (min-width: 320px) and (max-width: 480px) {
+	.topnav.responsive {
+		position: relative;
+	}
+	.topnav.responsive .icon {
+		position: absolute;
+		right: 0;
 		top: 0;
+	}
+	.topnav.responsive a {
+		float: none;
+		display: block;
+		text-align: left;
 	}
 }
