--- a/styles/about.css
+++ b/styles/about.css
@@ -1,5 +1,7 @@
 .about-section {
 	padding: 100px 330px;
+	color: rgb(207, 207, 207);
+	background-color: #1a1f2c;
 }
 .about-container {
 	display: flex;
@@ -12,9 +14,6 @@
 	font-size: 24px;
 	font-weight: 500;
 	text-align: center;
-}
-.icon_text {
-	color: #666;
 }
 .about_content {
 	margin-top: 100px;
@@ -29,7 +28,6 @@
 }
 .about_text-p {
 	font-size: 18px;
-	color: #666;
 	max-width: 60rem;
 	line-height: 1.8;
 	margin-bottom: 1rem;
@@ -52,7 +50,6 @@
 	background: rgba(153, 153, 153, 0.2);
 	border-radius: 5px;
 	font-weight: 600;
-	color: #666;
 }
 .about-icon {
 	font-size: 100px;
