--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -2,12 +2,12 @@
 	display: flex;
 	gap: 60px;
 	justify-content: center;
-	background-color:rgb(255, 255, 255);
+	background-color: #121212;
+	color: rgb(207, 207, 207);
 }
 .topnav a {
 	float: left;
 	display: block;
-	color: #000000;
 	text-align: center;
 	padding: 25px 35px;
 	text-decoration: none;
@@ -20,7 +20,7 @@
 	padding: 2px;
 	display: block;
 	content: "";
-	border-bottom: solid 2px #019fb6;
+	border-bottom: solid 2px var(--main-color);
 	transform: scaleX(0);
 	transition: transform 0.3s ease-in-out;
 }
