--- a/styles/projects.css
+++ b/styles/projects.css
@@ -1,6 +1,7 @@
 .projects-section {
 	padding: 100px 90px;
-	background-color: #f5f5f5;	
+	color: rgb(207, 207, 207);
+	background-color: #293145;
 }
 .projects_container {
 	display: grid;
@@ -17,7 +18,7 @@
 }
 
 .projects__project .content-overlay {
-	background: whitesmoke;
+	background: #1a1f2c;
 	position: absolute;
 	height: 99%;
 	width: 100%;
@@ -73,7 +74,6 @@
 }
 
 .content-details p {
-	color: #666;
 	font-size: 18px;
 	font-weight: 400;
 }
