--- a/styles/contact.css
+++ b/styles/contact.css
@@ -17,7 +17,7 @@
 	outline: none;
 	padding: 20px;
 	width: 100%;
-	border: 1px solid #ebebeb;
+	border: 1px solid var(--main-color);
 	font-size: 16px;
 	letter-spacing: 0;
 	background: #1a1f2c;
