--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -41,31 +41,9 @@
 }
 @media (min-width: 320px) and (max-width: 480px) {
 	.topnav {
-		display:inline;
-		overflow: hidden;
-	}
-	.topnav a {
-		font-size: 15px;
 		display: none;
 	}
-	.topnav a.icon {
-		float: right;
-		display: block;
-	}
-}
-
-@media (min-width: 320px) and (max-width: 480px) {
-	.topnav.responsive {
-		position: relative;
-	}
-	.topnav.responsive .icon {
-		position: absolute;
-		right: 0;
-		top: 0;
-	}
-	.topnav.responsive a {
-		float: none;
-		display: block;
-		text-align: left;
+	.sticky + .about-section {
+		padding-top: 50px;
 	}
 }
